Redesign the object mapper
With a few years of experience and real-world use, there were many
improvements to make. The object mapper design has shifted to allow many
pluggable extension points, allowing custom features from many sources
to be integrated into one object mapper.

A few default processors are provided as well. These are subject to
extension as time goes on.

Fixes #36
Fixes #136
Fixes #148